[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/weapons/13.png" type="Texture" id=1]
[ext_resource path="res://Scenes/bullet2.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.00003
height = 32.0001

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.99997
height = 32.0003

[node name="bullet" type="Node2D"]
script = ExtResource( 2 )

[node name="hitbox_b" type="Area2D" parent="."]
position = Vector2( -431.001, -276 )
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_b"]
position = Vector2( 431.001, 276 )
rotation = 1.55728
shape = SubResource( 1 )

[node name="sprite_b" type="Sprite" parent="."]
position = Vector2( -4, 0 )
scale = Vector2( 0.340278, 0.340278 )
texture = ExtResource( 1 )

[node name="impactDetector_b" type="Area2D" parent="sprite_b"]
position = Vector2( -1254.86, -811.102 )
scale = Vector2( 2.93878, 2.93878 )
collision_layer = 0
collision_mask = 15
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="sprite_b/impactDetector_b"]
position = Vector2( 431, 276 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
